solved flickering issue

--- a/styles/globals/_base.scss
+++ b/styles/globals/_base.scss
@@ -77,7 +77,7 @@ button,
 }
 
 figure {
-  @include appear-animation(.50s);
+  // @include appear-animation(.50s);
   border: 0;
   display: block;
   margin: 0;
@@ -94,7 +94,7 @@ figure {
 }
 
 img {
-  @include appear-animation(.50s);
+  // @include appear-animation(.50s);
   border: 0;
   display: block;
   margin: 0;
@@ -105,7 +105,7 @@ img {
 }
 
 svg {
-  @include appear-animation(.50s);
+  // @include appear-animation(.50s);
   @include hover-animation(.50s);
   border: 0;
   display: block;
